# BuildingAccessSystem

./: .gitignore  .gitmodules  AES128.h  Buffer.h  Classic.cpp  Desfire.h  DoorOpenerSketch.ino  PN532.cpp  PN532.h  README.md  Secrets.h  Utils.cpp  Utils.h  platformio.ini
boards/controller/: door.sch  dvernik.kicad_pcb  dvernik.net  dvernik.pro  power.sch
boards/reader/: fp-lib-table  reader.kicad_pcb  reader.net  reader.sch
controller/: .gitignore  CMakeLists.txt  README.md  platformio.ini
controller/hw/: README.md  door.sch  dvernik-cache.lib  dvernik.kicad_pcb  dvernik.net  dvernik.pro  dvernik.sch  fp-lib-table  power.sch  reader_intf.sch  sym-lib-table
controller/lib/: DCF77  SD  Time  Timezone  etl
controller/openocd/: openocd.cfg
controller/src/: DoorOpenerSketch.cpp  Secrets.cpp  Secrets.h  Utils.cpp  Utils.h  bluetooth.cpp  bluetooth.h  cardmanager.cpp  cardmanager.h  config.h  countdown.cpp  countdown.h  hal.cpp  hal.h  (+5 more)
reader/: .gitignore  CMakeLists.txt  README.md  platformio.ini
reader/boards/: reader-ke04.json
reader/hw/: reader-cache.lib  reader.kicad_pcb  reader.net  reader.pro  reader.sch  sym-lib-table
reader/hw/seedstudio/: reader.drl  reader.gbl  reader.gbo  reader.gbs  reader.gml  reader.gtl  reader.gto  reader.gts
reader/lib/: readme.txt
reader/openocd/: openocd.cfg
reader/src/: ke04.h  main.cpp  mke04z4.h
src/: AES128.cpp  Classic.h  DES.h  DesFireKey.h  Desfire.cpp  DoorOpenerSketch.cpp  DoorOpenerSketch.ino  PN532.cpp  Secrets.cpp  Secrets.h  UltralightC.cpp  UltralightC.h  UserManager.h  cardmanager.cpp  cardmanager.h
(+37 files in other folders)
